Work in progress, just latex files are updated

--- a/pass4/Latex/EvSelectionPlots.tex
+++ b/pass4/Latex/EvSelectionPlots.tex
@@ -88,6 +88,10 @@
   \caption{Progress of positron $d_{0}$ cut.}
 \end{figure}
 
+\clearpage
+\section{Cluster - Track time difference plots }
+\subsection{Electrons: Non separated}
+There is no distinction on whether the cluster is on the top ot bottom half of the detector.
 %%%%%%%%%%%%%%%%%%% Electron cl - trk dt cuts %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}[!htb]
  \centering
@@ -120,8 +124,8 @@
  \subfloat{\label{fig:emClTrkDt_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_WAB_CutEffect.pdf}} 
  \caption{Electrons WABs: Cluster track time difference as a function of Momentum. } 
 \end{figure}
-
-
+\clearpage
+\subsection{Positrons: Non separated}
 %%%%%%%%%%%%%%%%%%% Positron cl - trk dt cuts %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  \begin{figure}[!htb]
  \centering
@@ -155,7 +159,157 @@
  \caption{Positrons WABs: Cluster track time difference as a function of Momentum. } 
 \end{figure}
 
+\clearpage
+\subsection{Electrons: Separated}
+Plots in this section are separated, depending the cluster is in the top or bottom half of the detector. See caption of plots in order to determine which detector half it represents.
+\subsubsection{Top Half}
+%%%%%%%%%%%%%%%%%%% Electron cl - trk dt Top cuts %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emClTrkDt_Top_Data_All}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Top_Data_All.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Top_Data_AllBut}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Top_Data_AllBut.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Top_Data_CutEffect}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Top_Data_CutEffect.pdf}} 
+ \caption{Electrons Data: Cluster track time difference as a function of Momentum. for clusters in the top half. }
+\end{figure}
 
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emClTrkDt_Top_Tri_All}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Top_Tri_All.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Top_Tri_AllBut}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Top_Tri_AllBut.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Top_Tri_CutEffect}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Top_Tri_CutEffect.pdf}} 
+ \caption{Electrons Tri: Cluster track time difference as a function of Momentum. for clusters in the top half. }
+\end{figure}
+
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emClTrkDt_Top_Rad_All}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Top_Rad_All.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Top_Rad_AllBut}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Top_Rad_AllBut.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Top_Rad_CutEffect}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Top_Rad_CutEffect.pdf}} 
+ \caption{Electrons Rad: Cluster track time difference as a function of Momentum. for clusters in the top half. }
+\end{figure}
+
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emClTrkDt_Top_WAB_All}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Top_WAB_All.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Top_WAB_AllBut}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Top_WAB_AllBut.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Top_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Top_WAB_CutEffect.pdf}} 
+ \caption{Electrons WAB: Cluster track time difference as a function of Momentum. for clusters in the top half. }
+\end{figure}
+
+\clearpage
+\subsubsection{Bottom Half}
+%%%%%%%%%%%%%%%%%%% Electron cl - trk dt Bot cuts %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emClTrkDt_Bot_Data_All}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Bot_Data_All.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Bot_Data_AllBut}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Bot_Data_AllBut.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Bot_Data_CutEffect}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Bot_Data_CutEffect.pdf}} 
+ \caption{Electrons Data: Cluster track time difference as a function of Momentum. for clusters in the bottom half. }
+\end{figure}
+
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emClTrkDt_Bot_Tri_All}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Bot_Tri_All.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Bot_Tri_AllBut}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Bot_Tri_AllBut.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Bot_Tri_CutEffect}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Bot_Tri_CutEffect.pdf}} 
+ \caption{Electrons Tri: Cluster track time difference as a function of Momentum. for clusters in the bottom half. }
+\end{figure}
+
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emClTrkDt_Bot_Rad_All}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Bot_Rad_All.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Bot_Rad_AllBut}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Bot_Rad_AllBut.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Bot_Rad_CutEffect}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Bot_Rad_CutEffect.pdf}} 
+ \caption{Electrons Rad: Cluster track time difference as a function of Momentum. for clusters in the bottom half. }
+\end{figure}
+
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emClTrkDt_Bot_WAB_All}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Bot_WAB_All.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Bot_WAB_AllBut}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Bot_WAB_AllBut.pdf}}
+ \subfloat{\label{fig:emClTrkDt_Bot_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/em_cl_trk_dT_Bot_WAB_CutEffect.pdf}} 
+ \caption{Electrons WAB: Cluster track time difference as a function of Momentum. for clusters in the bottom half. }
+\end{figure}
+
+\clearpage
+
+\subsection{Positrons: Separated}
+Plots in this section are separated, depending the cluster is in the top or bottom half of the detector. See caption of plots in order to determine which detector half it represents.
+\subsubsection{Top Half}
+%%%%%%%%%%%%%%%%%%% Positron cl - trk dt Top cuts %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epClTrkDt_Top_Data_All}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Top_Data_All.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Top_Data_AllBut}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Top_Data_AllBut.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Top_Data_CutEffect}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Top_Data_CutEffect.pdf}} 
+ \caption{Positrons Data: Cluster track time difference as a function of Momentum. for clusters in the top half. }
+\end{figure}
+
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epClTrkDt_Top_Tri_All}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Top_Tri_All.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Top_Tri_AllBut}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Top_Tri_AllBut.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Top_Tri_CutEffect}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Top_Tri_CutEffect.pdf}} 
+ \caption{Positrons Tri: Cluster track time difference as a function of Momentum. for clusters in the top half. }
+\end{figure}
+
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epClTrkDt_Top_Rad_All}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Top_Rad_All.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Top_Rad_AllBut}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Top_Rad_AllBut.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Top_Rad_CutEffect}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Top_Rad_CutEffect.pdf}} 
+ \caption{Positrons Rad: Cluster track time difference as a function of Momentum. for clusters in the top half. }
+\end{figure}
+
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epClTrkDt_Top_WAB_All}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Top_WAB_All.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Top_WAB_AllBut}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Top_WAB_AllBut.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Top_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Top_WAB_CutEffect.pdf}} 
+ \caption{Positrons WAB: Cluster track time difference as a function of Momentum. for clusters in the top half. }
+\end{figure}
+
+\clearpage
+\subsubsection{Bottom Half}
+%%%%%%%%%%%%%%%%%%% Positron cl - trk dt Bot cuts %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epClTrkDt_Bot_Data_All}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Bot_Data_All.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Bot_Data_AllBut}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Bot_Data_AllBut.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Bot_Data_CutEffect}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Bot_Data_CutEffect.pdf}} 
+ \caption{Positrons Data: Cluster track time difference as a function of Momentum. for clusters in the bottom half. }
+\end{figure}
+
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epClTrkDt_Bot_Tri_All}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Bot_Tri_All.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Bot_Tri_AllBut}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Bot_Tri_AllBut.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Bot_Tri_CutEffect}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Bot_Tri_CutEffect.pdf}} 
+ \caption{Positrons Tri: Cluster track time difference as a function of Momentum. for clusters in the bottom half. }
+\end{figure}
+
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epClTrkDt_Bot_Rad_All}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Bot_Rad_All.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Bot_Rad_AllBut}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Bot_Rad_AllBut.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Bot_Rad_CutEffect}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Bot_Rad_CutEffect.pdf}} 
+ \caption{Positrons Rad: Cluster track time difference as a function of Momentum. for clusters in the bottom half. }
+\end{figure}
+
+\begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epClTrkDt_Bot_WAB_All}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Bot_WAB_All.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Bot_WAB_AllBut}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Bot_WAB_AllBut.pdf}}
+ \subfloat{\label{fig:epClTrkDt_Bot_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/ep_cl_trk_dT_Bot_WAB_CutEffect.pdf}} 
+ \caption{Positrons WAB: Cluster track time difference as a function of Momentum. for clusters in the bottom half. }
+\end{figure}
+
+\clearpage
+
+\section{Cluster - Track ``X'' coordinate difference}
+Plots in this section represent cluster and Track X coordinate difference as a function of the track momentum. 
+\subsection{Unseparated Electrons}
+This subsection represents electrons without distinguishing in which halfe the particle went, and whether it had a hit in L6.
 %%%%%%%%%%%%%%%%%%% Electrons dX Cuts %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  \begin{figure}[!htb]
  \centering
@@ -188,7 +342,8 @@
  \subfloat{\label{fig:emdX_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/dX_em_WAB_CutEffect.pdf}} 
  \caption{Positrons Rad Tridents: Cluster track X coordinate difference as a function of momentum. }
 \end{figure}
-
+\clearpage
+\subsection{Unseparated Positrons}
 %%%%%%%%%%%%%%%%%%% Positrons dX Cuts %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  \begin{figure}[!htb]
  \centering
@@ -223,6 +378,300 @@
 \end{figure}
 
 \clearpage
+\subsection{ Electrons: Separated }
+Figures in this section are separated depending on which half they belong to, and whether they have hit in L6.
+\subsubsection{Electrons: Top With L6 hit}
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emTopWithL6_Data_All}\grinp[width=0.32\tw]{Figs/dX_emTopWithL6_Data_All.pdf}}
+ \subfloat{\label{fig:emdX_emTopWithL6_Data_AllBut}\grinp[width=0.32\tw]{Figs/dX_emTopWithL6_Data_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emTopWithL6_Data_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emTopWithL6_Data_CutEffect.pdf}} 
+ \caption{Electrons, Top with L6, Data: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emTopWithL6_Tri_All}\grinp[width=0.32\tw]{Figs/dX_emTopWithL6_Tri_All.pdf}}
+ \subfloat{\label{fig:emdX_emTopWithL6_Tri_AllBut}\grinp[width=0.32\tw]{Figs/dX_emTopWithL6_Tri_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emTopWithL6_Tri_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emTopWithL6_Tri_CutEffect.pdf}} 
+ \caption{Electrons, Top with L6, Tri: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emTopWithL6_Rad_All}\grinp[width=0.32\tw]{Figs/dX_emTopWithL6_Rad_All.pdf}}
+ \subfloat{\label{fig:emdX_emTopWithL6_Rad_AllBut}\grinp[width=0.32\tw]{Figs/dX_emTopWithL6_Rad_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emTopWithL6_Rad_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emTopWithL6_Rad_CutEffect.pdf}} 
+ \caption{Electrons, Top with L6, Rad: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emTopWithL6_WAB_All}\grinp[width=0.32\tw]{Figs/dX_emTopWithL6_WAB_All.pdf}}
+ \subfloat{\label{fig:emdX_emTopWithL6_WAB_AllBut}\grinp[width=0.32\tw]{Figs/dX_emTopWithL6_WAB_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emTopWithL6_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emTopWithL6_WAB_CutEffect.pdf}} 
+ \caption{Electrons, Top with L6, WAB: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+\clearpage
+\subsubsection{Electrons: Top No L6 hit}
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emTopNoL6_Data_All}\grinp[width=0.32\tw]{Figs/dX_emTopNoL6_Data_All.pdf}}
+ \subfloat{\label{fig:emdX_emTopNoL6_Data_AllBut}\grinp[width=0.32\tw]{Figs/dX_emTopNoL6_Data_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emTopNoL6_Data_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emTopNoL6_Data_CutEffect.pdf}} 
+ \caption{Electrons, Top No L6, Data: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emTopNoL6_Tri_All}\grinp[width=0.32\tw]{Figs/dX_emTopNoL6_Tri_All.pdf}}
+ \subfloat{\label{fig:emdX_emTopNoL6_Tri_AllBut}\grinp[width=0.32\tw]{Figs/dX_emTopNoL6_Tri_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emTopNoL6_Tri_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emTopNoL6_Tri_CutEffect.pdf}} 
+ \caption{Electrons, Top No L6, Tri: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emTopNoL6_Rad_All}\grinp[width=0.32\tw]{Figs/dX_emTopNoL6_Rad_All.pdf}}
+ \subfloat{\label{fig:emdX_emTopNoL6_Rad_AllBut}\grinp[width=0.32\tw]{Figs/dX_emTopNoL6_Rad_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emTopNoL6_Rad_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emTopNoL6_Rad_CutEffect.pdf}} 
+ \caption{Electrons, Top No L6, Rad: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emTopNoL6_WAB_All}\grinp[width=0.32\tw]{Figs/dX_emTopNoL6_WAB_All.pdf}}
+ \subfloat{\label{fig:emdX_emTopNoL6_WAB_AllBut}\grinp[width=0.32\tw]{Figs/dX_emTopNoL6_WAB_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emTopNoL6_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emTopNoL6_WAB_CutEffect.pdf}} 
+ \caption{Electrons, Top No L6, WAB: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+\clearpage
+
+\subsubsection{Electrons: Bot With L6 hit}
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emBotWithL6_Data_All}\grinp[width=0.32\tw]{Figs/dX_emBotWithL6_Data_All.pdf}}
+ \subfloat{\label{fig:emdX_emBotWithL6_Data_AllBut}\grinp[width=0.32\tw]{Figs/dX_emBotWithL6_Data_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emBotWithL6_Data_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emBotWithL6_Data_CutEffect.pdf}} 
+ \caption{Electrons, Bot with L6, Data: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emBotWithL6_Tri_All}\grinp[width=0.32\tw]{Figs/dX_emBotWithL6_Tri_All.pdf}}
+ \subfloat{\label{fig:emdX_emBotWithL6_Tri_AllBut}\grinp[width=0.32\tw]{Figs/dX_emBotWithL6_Tri_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emBotWithL6_Tri_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emBotWithL6_Tri_CutEffect.pdf}} 
+ \caption{Electrons, Bot with L6, Tri: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emBotWithL6_Rad_All}\grinp[width=0.32\tw]{Figs/dX_emBotWithL6_Rad_All.pdf}}
+ \subfloat{\label{fig:emdX_emBotWithL6_Rad_AllBut}\grinp[width=0.32\tw]{Figs/dX_emBotWithL6_Rad_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emBotWithL6_Rad_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emBotWithL6_Rad_CutEffect.pdf}} 
+ \caption{Electrons, Bot with L6, Rad: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emBotWithL6_WAB_All}\grinp[width=0.32\tw]{Figs/dX_emBotWithL6_WAB_All.pdf}}
+ \subfloat{\label{fig:emdX_emBotWithL6_WAB_AllBut}\grinp[width=0.32\tw]{Figs/dX_emBotWithL6_WAB_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emBotWithL6_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emBotWithL6_WAB_CutEffect.pdf}} 
+ \caption{Electrons, Bot with L6, WAB: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+\clearpage
+\subsubsection{Electrons: Bot No L6 hit}
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emBotNoL6_Data_All}\grinp[width=0.32\tw]{Figs/dX_emBotNoL6_Data_All.pdf}}
+ \subfloat{\label{fig:emdX_emBotNoL6_Data_AllBut}\grinp[width=0.32\tw]{Figs/dX_emBotNoL6_Data_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emBotNoL6_Data_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emBotNoL6_Data_CutEffect.pdf}} 
+ \caption{Electrons, Bot No L6, Data: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emBotNoL6_Tri_All}\grinp[width=0.32\tw]{Figs/dX_emBotNoL6_Tri_All.pdf}}
+ \subfloat{\label{fig:emdX_emBotNoL6_Tri_AllBut}\grinp[width=0.32\tw]{Figs/dX_emBotNoL6_Tri_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emBotNoL6_Tri_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emBotNoL6_Tri_CutEffect.pdf}} 
+ \caption{Electrons, Bot No L6, Tri: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emBotNoL6_Rad_All}\grinp[width=0.32\tw]{Figs/dX_emBotNoL6_Rad_All.pdf}}
+ \subfloat{\label{fig:emdX_emBotNoL6_Rad_AllBut}\grinp[width=0.32\tw]{Figs/dX_emBotNoL6_Rad_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emBotNoL6_Rad_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emBotNoL6_Rad_CutEffect.pdf}} 
+ \caption{Electrons, Bot No L6, Rad: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:emdX_emBotNoL6_WAB_All}\grinp[width=0.32\tw]{Figs/dX_emBotNoL6_WAB_All.pdf}}
+ \subfloat{\label{fig:emdX_emBotNoL6_WAB_AllBut}\grinp[width=0.32\tw]{Figs/dX_emBotNoL6_WAB_AllBut.pdf}}
+ \subfloat{\label{fig:emdX_emBotNoL6_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/dX_emBotNoL6_WAB_CutEffect.pdf}} 
+ \caption{Electrons, Bot No L6, WAB: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+\clearpage
+
+
+
+\subsection{ Positrons: Separated }
+Figures in this section are separated depending on which half they belong to, and whether they have hit in L6.
+\subsubsection{Positrons: Top With L6 hit}
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epTopWithL6_Data_All}\grinp[width=0.32\tw]{Figs/dX_epTopWithL6_Data_All.pdf}}
+ \subfloat{\label{fig:epdX_epTopWithL6_Data_AllBut}\grinp[width=0.32\tw]{Figs/dX_epTopWithL6_Data_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epTopWithL6_Data_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epTopWithL6_Data_CutEffect.pdf}} 
+ \caption{Positrons, Top with L6, Data: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epTopWithL6_Tri_All}\grinp[width=0.32\tw]{Figs/dX_epTopWithL6_Tri_All.pdf}}
+ \subfloat{\label{fig:epdX_epTopWithL6_Tri_AllBut}\grinp[width=0.32\tw]{Figs/dX_epTopWithL6_Tri_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epTopWithL6_Tri_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epTopWithL6_Tri_CutEffect.pdf}} 
+ \caption{Positrons, Top with L6, Tri: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epTopWithL6_Rad_All}\grinp[width=0.32\tw]{Figs/dX_epTopWithL6_Rad_All.pdf}}
+ \subfloat{\label{fig:epdX_epTopWithL6_Rad_AllBut}\grinp[width=0.32\tw]{Figs/dX_epTopWithL6_Rad_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epTopWithL6_Rad_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epTopWithL6_Rad_CutEffect.pdf}} 
+ \caption{Positrons, Top with L6, Rad: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epTopWithL6_WAB_All}\grinp[width=0.32\tw]{Figs/dX_epTopWithL6_WAB_All.pdf}}
+ \subfloat{\label{fig:epdX_epTopWithL6_WAB_AllBut}\grinp[width=0.32\tw]{Figs/dX_epTopWithL6_WAB_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epTopWithL6_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epTopWithL6_WAB_CutEffect.pdf}} 
+ \caption{Positrons, Top with L6, WAB: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+\clearpage
+\subsubsection{Positrons: Top No L6 hit}
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epTopNoL6_Data_All}\grinp[width=0.32\tw]{Figs/dX_epTopNoL6_Data_All.pdf}}
+ \subfloat{\label{fig:epdX_epTopNoL6_Data_AllBut}\grinp[width=0.32\tw]{Figs/dX_epTopNoL6_Data_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epTopNoL6_Data_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epTopNoL6_Data_CutEffect.pdf}} 
+ \caption{Positrons, Top No L6, Data: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epTopNoL6_Tri_All}\grinp[width=0.32\tw]{Figs/dX_epTopNoL6_Tri_All.pdf}}
+ \subfloat{\label{fig:epdX_epTopNoL6_Tri_AllBut}\grinp[width=0.32\tw]{Figs/dX_epTopNoL6_Tri_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epTopNoL6_Tri_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epTopNoL6_Tri_CutEffect.pdf}} 
+ \caption{Positrons, Top No L6, Tri: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epTopNoL6_Rad_All}\grinp[width=0.32\tw]{Figs/dX_epTopNoL6_Rad_All.pdf}}
+ \subfloat{\label{fig:epdX_epTopNoL6_Rad_AllBut}\grinp[width=0.32\tw]{Figs/dX_epTopNoL6_Rad_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epTopNoL6_Rad_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epTopNoL6_Rad_CutEffect.pdf}} 
+ \caption{Positrons, Top No L6, Rad: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epTopNoL6_WAB_All}\grinp[width=0.32\tw]{Figs/dX_epTopNoL6_WAB_All.pdf}}
+ \subfloat{\label{fig:epdX_epTopNoL6_WAB_AllBut}\grinp[width=0.32\tw]{Figs/dX_epTopNoL6_WAB_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epTopNoL6_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epTopNoL6_WAB_CutEffect.pdf}} 
+ \caption{Positrons, Top No L6, WAB: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+\clearpage
+
+\subsubsection{Positrons: Bot With L6 hit}
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epBotWithL6_Data_All}\grinp[width=0.32\tw]{Figs/dX_epBotWithL6_Data_All.pdf}}
+ \subfloat{\label{fig:epdX_epBotWithL6_Data_AllBut}\grinp[width=0.32\tw]{Figs/dX_epBotWithL6_Data_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epBotWithL6_Data_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epBotWithL6_Data_CutEffect.pdf}} 
+ \caption{Positrons, Bot with L6, Data: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epBotWithL6_Tri_All}\grinp[width=0.32\tw]{Figs/dX_epBotWithL6_Tri_All.pdf}}
+ \subfloat{\label{fig:epdX_epBotWithL6_Tri_AllBut}\grinp[width=0.32\tw]{Figs/dX_epBotWithL6_Tri_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epBotWithL6_Tri_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epBotWithL6_Tri_CutEffect.pdf}} 
+ \caption{Positrons, Bot with L6, Tri: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epBotWithL6_Rad_All}\grinp[width=0.32\tw]{Figs/dX_epBotWithL6_Rad_All.pdf}}
+ \subfloat{\label{fig:epdX_epBotWithL6_Rad_AllBut}\grinp[width=0.32\tw]{Figs/dX_epBotWithL6_Rad_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epBotWithL6_Rad_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epBotWithL6_Rad_CutEffect.pdf}} 
+ \caption{Positrons, Bot with L6, Rad: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epBotWithL6_WAB_All}\grinp[width=0.32\tw]{Figs/dX_epBotWithL6_WAB_All.pdf}}
+ \subfloat{\label{fig:epdX_epBotWithL6_WAB_AllBut}\grinp[width=0.32\tw]{Figs/dX_epBotWithL6_WAB_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epBotWithL6_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epBotWithL6_WAB_CutEffect.pdf}} 
+ \caption{Positrons, Bot with L6, WAB: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+\clearpage
+\subsubsection{Positrons: Bot No L6 hit}
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epBotNoL6_Data_All}\grinp[width=0.32\tw]{Figs/dX_epBotNoL6_Data_All.pdf}}
+ \subfloat{\label{fig:epdX_epBotNoL6_Data_AllBut}\grinp[width=0.32\tw]{Figs/dX_epBotNoL6_Data_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epBotNoL6_Data_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epBotNoL6_Data_CutEffect.pdf}} 
+ \caption{Positrons, Bot No L6, Data: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epBotNoL6_Tri_All}\grinp[width=0.32\tw]{Figs/dX_epBotNoL6_Tri_All.pdf}}
+ \subfloat{\label{fig:epdX_epBotNoL6_Tri_AllBut}\grinp[width=0.32\tw]{Figs/dX_epBotNoL6_Tri_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epBotNoL6_Tri_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epBotNoL6_Tri_CutEffect.pdf}} 
+ \caption{Positrons, Bot No L6, Tri: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epBotNoL6_Rad_All}\grinp[width=0.32\tw]{Figs/dX_epBotNoL6_Rad_All.pdf}}
+ \subfloat{\label{fig:epdX_epBotNoL6_Rad_AllBut}\grinp[width=0.32\tw]{Figs/dX_epBotNoL6_Rad_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epBotNoL6_Rad_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epBotNoL6_Rad_CutEffect.pdf}} 
+ \caption{Positrons, Bot No L6, Rad: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+ \begin{figure}[!htb]
+ \centering
+ \subfloat{\label{fig:epdX_epBotNoL6_WAB_All}\grinp[width=0.32\tw]{Figs/dX_epBotNoL6_WAB_All.pdf}}
+ \subfloat{\label{fig:epdX_epBotNoL6_WAB_AllBut}\grinp[width=0.32\tw]{Figs/dX_epBotNoL6_WAB_AllBut.pdf}}
+ \subfloat{\label{fig:epdX_epBotNoL6_WAB_CutEffect}\grinp[width=0.32\tw]{Figs/dX_epBotNoL6_WAB_CutEffect.pdf}} 
+ \caption{Positrons, Bot No L6, WAB: Cluster track X coordinate difference as a function of momentum. }
+\end{figure}
+
+\clearpage
+
+
+
+
+
 \newpage
 \subsection*{PSum comparison for different mass bins}
 \begin{figure}[!htb]
